2009-05-08  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentPresenterTest.cs: Add tests
	  which explicitly check that changing
	  ContentPresenter.Content/ContentTemplate unsets the visual
	  child.

2009-05-08  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentControlTest.cs: That debug
	  spew wasn't supposed to hit SVN

2009-05-07  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Media/VisualTreeHelperTest.cs:
	* System.Windows.Controls/ContentControlTest.cs: If the
	  content property changes, the Template is cleared if it has
	  already been applied.

2009-05-07  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentControlTest.cs: Check more
	  things in the test.

2009-05-07  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ControlTest.cs: Add extra spew to
	  the test to check what happens when a template is applied.

2009-05-07  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/FrameworkElementTest.cs: Add tests to find
	  out when Measure/Arrange complete synchronously and when
	  they complete asynchronously.

2009-05-07  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentControlTest.cs: Add extra
	  tests to verify behaviour of ContentControl.ContentTemplate.

2009-05-07  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentPresenterTest.cs: Check how
	  contentpresenter handles a string as its content.

2009-05-07  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentControlTest.cs:
	* System.Windows.Controls/ContentPresenterTest.cs: Add some
	  tests to see what default templates are applied

2009-05-07  Andreia Gaita  <avidigal@novell.com>

	* System.Windows/UIElementTest.cs:  Add test to check for the
	above (TransformToVisual)

2009-05-06  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemsControlTest.cs: Testing default
	  templating in ItemsControl
